<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingTop="5dp"
                android:paddingBottom="8dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

    <RelativeLayout
        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/space_one"
            android:layout_marginTop="10dp">
        <it.auties.styders.utils.BlockedViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="1.5dp"
                android:showDividers="middle"/>
    </RelativeLayout>


    <View
            android:id="@+id/space_one"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_above="@id/tabLayout"
            android:layout_centerHorizontal="true"
            android:alpha=".5"
            android:layout_marginBottom="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/darker_gray"/>

    <it.auties.styders.utils.ClosableTabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:divider="@android:color/white"
            android:showDividers="middle"
            app:tabIndicator="?android:selectableItemBackground"
            app:tabIndicatorGravity="top"
            app:tabSelectedTextColor="?attr/activated_tab"
            app:tabTextAppearance="@style/TabLayoutStyle"
            app:tabTextColor="@color/gray_text"
            app:tabRippleColor="@android:color/transparent">

        <com.google.android.material.tabs.TabItem
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:icon="@drawable/ic_home"
                android:text="@string/home"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:icon="@drawable/ic_notch"
                android:text="@string/notch"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:icon="@drawable/ic_timer"
                android:text="@string/timer"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:icon="@drawable/ic_settings"
                android:text="@string/settings"/>

    </it.auties.styders.utils.ClosableTabLayout>

</RelativeLayout>

