<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/themeChooserRoot"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@color/gray_background">

    <RadioGroup
            android:id="@+id/startStyleOptions"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/themeBtn"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:paddingStart="10dp"
            android:gravity="center"
            android:paddingEnd="10dp">

        <RadioButton
                android:id="@+id/startStyleOptionsOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/white_theme"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:srcCompat="@drawable/theme_white"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_weight="1"/>

        <RadioButton
                android:id="@+id/startStyleOptionsTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:buttonTint="@color/white"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/dark_theme"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:srcCompat="@drawable/theme_gray"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_weight="1"/>

        <RadioButton
                android:id="@+id/startStyleOptionsThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:buttonTint="@color/white"
                android:checked="true"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/gray_theme"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:srcCompat="@drawable/theme_black"
                android:layout_weight="1"
                android:paddingEnd="30dp"
                android:layout_marginBottom="30dp"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/themeBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="8.96pt"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:background="@drawable/ripple"
            android:backgroundTint="@color/white"/>

</RelativeLayout>